# lunatix-starter-proj

./: .gitignore  LICENSE  README.md  build-config.json  build.sh  configure.sh  install.sh  package.json  start.sh
apps/desktop-app/: package.json
apps/desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-app/src-tauri/icons/: icon.icns
apps/desktop-app/src-tauri/src/: main.rs
apps/shared-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/shared-ui/src/: Home.svelte  app.css  main.ts  vite-env.d.ts
apps/shared-ui/src/lib/: api.ts  config.ts
apps/web-app/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-app/src/: main.ts  vite-env.d.ts
cpp-server/: .clang-format  .clang-tidy  .clangd  meson.build
cpp-server/src/: main.cpp
scripts/: check-deps.sh  clean.sh  configure.sh  desktop-run.sh  lib-config.sh  lib-utils.sh
